--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .navbar {
-    width: 100%;
+    width: 100vw;
     height: 4rem;
     background-color: #010409;
     border-bottom: 0.5px solid rgb(255, 255, 255, 0.3);
