--- a/resources/styles/mobile-l.css
+++ b/resources/styles/mobile-l.css
@@ -1,4 +1,4 @@
-.search-bar, .vertical-seperation, .add-or-select-option, .issues-btn, .pull-request-btn {
+.search-bar, .vertical-seperation, .add-or-select-option, .issues-btn, .pull-request-btn, .right-side-feed, .side-bar-holder, .main-content-fight-side-feed {
     display: none;
 }
 
@@ -8,4 +8,13 @@
 
 .navbar {
     padding: 1rem 0.2rem;
+}
+
+.content-holder {
+    flex-direction: column;
+}
+
+.side-bar-holder {
+    width: 100%;
+    height: auto;
 }
