--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -5,8 +5,14 @@
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
 }
 
+body {
+    width: 100%;
+    height: auto;
+    background-color: blue;
+}
+
 .navbar {
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     background-color: #010409;
     border-bottom: 0.5px solid rgb(255, 255, 255, 0.3);
@@ -140,6 +146,507 @@
     margin: 0 5px;
 }
 
-body {
-    background-color: #010409;
+.content-holder {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(1, 4, 9);
+}
+
+.side-bar-holder {
+    width: 20rem;
+    height: 100vh;
+    display: block;
+    position: sticky;
+    top: 0;
+    border-right: 0.5px solid rgb(255, 255, 255, 0.3);
+    background-color: #161b22;
+    padding: 2rem 1rem;
+    color: white;
+}
+
+.title-and-newbtn-holder {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title-and-newbtn-holder > h3 {
+    font-size: 1rem;
+}
+
+.title-and-newbtn-holder > button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.3rem;
+    border-radius: 5px;
+    background-color: green;
+    color: white;
+    border: none;
+}
+
+.title-and-newbtn-holder > button > svg {
+    fill: white;
+}
+
+.side-bar-holder > input {
+    width: 100%;
+    height: 1.5rem;
+    margin-top: 10px;
+    border-radius: 3px;
+    border: 1px solid rgb(255, 255, 255, 0.3);
+    background-color: #161b22;
+    padding: 10px;
+}
+
+.top-repo-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.top-repo-list > li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.top-repo-list > li > h5 {
+    color: white;
+}
+
+.top-repo-list > li > img {
+    width: 1.5rem;
+    border-radius: 40px;
+    margin-right: 10px;
+}
+
+.main-content-holder {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 2rem;
+}
+
+.main-feed {
+    width: 100%;
+    max-width: 50rem;
+    height: 100%;
+}
+
+.right-side-feed {
+    width: 100%;
+    height: auto;
+    border: 1px solid #30363d;
+    background-color: #0d1117;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 1rem;
+}
+
+.main-feed-menu-holder {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.main-feed-menu-holder > h2 {
+    color: #e6edf3;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+ 
+.main-feed-munus {
+    display: flex;
+    flex-direction: row;
+}
+
+.main-feed-munus > a {
+    color: #4493f8;
+    text-decoration: none;
+}
+
+.main-feed-munus > button {
+    margin-left: 1.4rem;
+    padding: 0.2rem 0.75rem;
+    color: #c9d1d9;
+    background-color: #21262d;
+    border: 1px solid #30363d;
+    border-radius: 6px;
+}
+
+.main-feed-munus svg {
+    fill: #c9d1d9;
+}
+
+.main-feed-holder {
+    width: 100%;
+    height: auto;
+    background-color: #0d1117;
+    border-radius: 0.375rem;
+    border: 1px solid #30363d;
+    padding: 1rem;
+    margin-bottom: 10px;
+}
+
+.main-feed-header {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.main-feed-header > svg {
+    fill: #c9d1d9;
+}
+
+.main-feed-image-holder {
+    height: 100%;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-feed-image-holder > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+}
+
+.main-feed-title-discription-holder {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 10px;
+}
+
+.main-feed-title-discription-holder > h4 > a {
+    color: #e6edf3;
+    text-align: start;
+    font-size: 0.8rem;
+    text-decoration: none;
+}
+
+.main-feed-title-discription-holder > h4{
+    color: #8d96a0;
+    font-size: 0.8rem;
+}
+
+.main-feed-option-menu-holder > svg {
+    fill: #8d96a0;
+}
+
+.main-feed-content {
+    background-color: #161b22;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin-top: 10px;
+    border-radius: 0.17rem;
+}
+
+.main-feed-content-row1 {
+    display: flex;
+    flex-direction: row;
+}
+
+.main-feed-content-row2 {
+    margin-top: 10px;
+    fill: #8d96a0;
+    color: white;
+}
+
+.main-feed-content-row1 > .main-feed-image-holder > img {
+    height: 20px;
+    width: 20px;
+}
+
+.main-cotet-feed-option-menu-holder {
+    display: flex;
+    padding: 5px;
+}
+
+.main-feed-option-button-1 {
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+    border: 1px solid #30363d;
+    border-radius: 0.18rem;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    color: #8d96a0;
+    background-color: #21262d;
+}
+
+.main-feed-option-button-2 {
+    padding: 1px 5px;
+    border: 1px solid #30363d;
+    border-radius: 0.18rem;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-left: none;
+    background-color: #21262d;
+}
+
+.main-feed-option-button-1 > svg {
+    fill: #8d96a0;
+    margin-right: 5px;
+}
+
+.main-feed-option-button-2 > svg {
+    fill: #8d96a0;
+}
+
+
+.right-side-feed-list {
+    list-style-type: none;
+    color: white;
+}
+
+.right-side-feed > h2 {
+    color: white;
+    font-size: 0.85rem;
+}
+
+.right-side-feed-list > li {
+    margin: 10px 0;
+    font-size: 0.8rem;
+    color: #8d96a0;
+}
+
+.right-side-feed-list > li > a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+.right-side-feed-list-footer {
+    height: auto;
+}
+
+.main-content-fight-side-feed {
+    padding: 0 10px;
+}
+
+
+.TimelineItem::before {
+    background-color: #30363db3;
+    bottom: 0;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+.right-side-feed-list-footer > a {
+    color: #8d96a0;
+    text-decoration: none;
+}
+
+.botten-right-feed {
+
+    /* TEMP */
+    height: 300px;
+}
+
+.botten-right-feed > .title {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;    
+    /* TEMP */ 
+    background-color: purple;
+}
+
+.botten-right-feed > .content1, .content2, .content3, .row1 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.row1, .row2 {
+    background-color: yellow;
+    margin: 2px 0;
+}
+
+.botten-right-feed > .footer {
+    width: 100%;
+    display: inline-block;
+    
+    /* TEMP */    
+    height: 30px;
+    background-color: purple;
+}
+
+.botten-right-feed > .title > h2 {
+    font-weight: 600;
+    font-size: 0.85rem;
+}
+
+.title-and-img-holder > img {
+    width: 20px;
+    height: 20px;
+    border-radius: 40px;
+}
+
+.button-holder {
+    width: auto;
+    height: auto;
+    background-color: #161b22;
+    padding: 3px 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-holder > svg {
+    fill: white;
+}
+
+
+.top-repo-explorer-container {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border: 1px solid #30363d;
+    background-color: #0d1117;
+    border-radius: 5px;
+}
+
+.top-repo-explorer-title-container {
+    width: 100%;
+    height: auto;
+    color: white;
+}
+
+.top-repo-suggestion {
+    width: 100%;
+    height: auto;
+    margin: 5px 0;
+    border-bottom: 1px solid #30363d;
+}
+
+.top-repo-explorer-footer-container {
+    width: 100%;
+    height: auto;
+    color: #4493f8;
+}
+
+
+.rop-repo-suggestion-title {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.rop-repo-suggestion-disc {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.rop-repo-suggestion-disc > p {
+    font-size: 0.75rem;
+    color: #8d96a0;
+}
+
+.rop-repo-suggestion-footer {
+    width: 100%;
+    height: 33%;
+    margin: 2px 0;
+}
+
+.top-repo-suggestin-title-image-holder > img {
+    width: 20px;
+    height: 20px;
+    border-radius: 40px;
+    margin-right: 10px;
+}
+
+.top-repo-suggestin-title-image-holder > a {
+    text-decoration: none;
+    color: white;
+}
+
+.top-repo-suggestin-title-image-holder, .top-repo-suggestin-star-button-holder {
+    display: flex;
+    align-items: center;
+}
+
+.top-repo-suggestin-star-button-holder {
+    padding: 0.3rem 1rem;
+    border: 1px solid #30363d;
+    background-color: #21262d;
+    border-radius: 6px;
+}
+
+.top-repo-suggestin-star-button-holder > svg {
+    fill: #c9d1d9;
+}
+
+.language-used-indicator {
+    color: white;
+    margin-left: 1rem;
+}
+
+.language-used-indicator, .rop-repo-suggestion-footer, .star-count-holder {
+    display: flex;
+    align-items: center;
+    color: #8d96a0;
+    margin-right: 5px;
+}
+
+.star-count-holder > svg, .small-circle {
+    margin-right: 5px;
+    fill: #8d96a0;
+}
+
+.small-circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 40px;
+    background-color: red;
+}
+
+.main-footer {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.copy-right-banner-holder {
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
+.copyright-keywords-holder > a {
+    text-decoration: none;
+    color: white;
 }
