--- a/resources/styles/mobile-m.css
+++ b/resources/styles/mobile-m.css
@@ -1,4 +1,4 @@
-.search-bar, .vertical-seperation, .add-or-select-option, .issues-btn, .pull-request-btn, .right-side-feed, .side-bar-holder, .main-content-fight-side-feed {
+.search-bar, .vertical-seperation, .add-or-select-option, .issues-btn, .pull-request-btn, .right-side-feed, .main-content-fight-side-feed {
     display: none;
 }
 
@@ -17,9 +17,54 @@
 
 .content-holder {
     flex-direction: column;
+    padding: 20px;
 }
 
 .side-bar-holder {
     width: 100%;
     height: auto;
+    background-color: #0d1117;
+    border-radius: 0.375rem;
+    border: 1px solid #30363d;
+    position: static;
+}
+
+.main-content-holder {
+    padding: 0;
+}
+
+.main-feed {
+    margin: 20px 0;
+}
+
+.main-feed-munus {
+    align-items: center;
+}
+
+.main-feed-holder {
+    padding: 10px;
+}
+
+.main-feed-content {
+    padding: 10px;
+}
+
+.main-feed-option-button-2, .main-feed-option-button-1 > span {
+    display: none;
+}
+
+.main-feed-option-button-1 {
+    border-radius: 0.18rem;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-feed-option-button-1 > svg > path {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
 }
