--- a/resources/styles/mobile-s.css
+++ b/resources/styles/mobile-s.css
@@ -14,10 +14,52 @@
     padding: 1rem 0.2rem;
 }
 
+
 .side-bar-holder {
     width: 100%;
     height: auto;
+    background-color: #0d1117;
+    border-radius: 0.375rem;
+    border: 1px solid #30363d;
+    position: static;
 }
 .content-holder {
     flex-direction: column;
+    padding: 20px;
+}
+
+.main-content-holder {
+    padding: 0;
+}
+
+.main-feed-menu-holder {
+    margin: 20px 0;
+}
+
+.main-feed-munus {
+    align-items: center;
+}
+
+.main-feed {
+    margin: 20px 0;
+}
+
+.main-feed-option-button-2, .main-feed-option-button-1 > span {
+    display: none;
+}
+
+.main-feed-option-button-1 {
+    border-radius: 0.18rem;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-feed-option-button-1 > svg > path {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
 }
