--- a/resources/styles/tablet.css
+++ b/resources/styles/tablet.css
@@ -9,3 +9,25 @@
 .navbar {
     padding: 1rem 0.2rem;
 }
+
+.side-bar-holder {
+    width: 100%;
+    height: auto;
+    background-color: #0d1117;
+    border-radius: 0.375rem;
+    border: 1px solid #30363d;
+    position: static;
+}
+
+.content-holder {
+    flex-direction: column;
+    padding: 20px;
+}
+
+.main-content-holder {
+    padding: 0;
+}
+
+.main-feed-menu-holder {
+    margin: 20px 0;
+}
